# kurage

./: .gitignore  README.md  api.d.ts  名称未設定ファイル.drawio
package/backend/: Cargo.toml
package/backend/config/: example.yaml
package/backend/src/: main.rs
package/backend/src/server/: lunch.rs  mod.rs
package/backend/src/server/api/: mod.rs
package/backend/src/server/api/admin/: mod.rs
package/backend/src/server/api/announcements/: mod.rs
package/backend/src/server/api/antennas/: mod.rs
package/backend/src/server/api/ap/: mod.rs
package/backend/src/server/api/app/: mod.rs
package/backend/src/server/api/auth/: mod.rs
package/backend/src/server/api/blocking/: mod.rs
package/backend/src/server/api/bubble_game/: mod.rs
package/backend/src/server/api/channels/: mod.rs
package/backend/src/server/api/charts/: mod.rs
package/backend/src/server/api/clips/: mod.rs
package/backend/src/server/api/drive/: mod.rs
package/backend/src/server/api/email_address/: mod.rs
package/backend/src/server/api/federation/: mod.rs
package/backend/src/server/api/flash/: mod.rs
package/backend/src/server/api/following/: mod.rs
package/backend/src/server/api/gallery/: mod.rs
package/backend/src/server/api/hashtags/: mod.rs
package/backend/src/server/api/i/: mod.rs
package/backend/src/server/api/invite/: mod.rs
package/backend/src/server/api/miauth/: mod.rs
package/backend/src/server/api/my/: mod.rs
package/backend/src/server/api/notes/: mod.rs
package/backend/src/server/api/notifications/: mod.rs
package/backend/src/utils/: config.rs
(+85 files in other folders)
