[package]
name = "kurage-backend"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs","cors"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.89"
serde_derive = "1.0.193"
hyper = "1.0.1"
